{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 3,
  "lineage": "e40979f3-f5a8-8bea-a75f-1ed83b5d2bb7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group/sg-0ea0fdb16654640cc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ea0fdb16654640cc",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "686255974968",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09db691bdff879418"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sg-0ea0fdb16654640cc",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group-rule/sgr-0bb1cce3183ecb064",
            "cidr_ipv4": "35.154.244.202/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0bb1cce3183ecb064",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0ea0fdb16654640cc",
            "security_group_rule_id": "sgr-0bb1cce3183ecb064",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sgr-0bb1cce3183ecb064",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    }
  ]
}